--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,3 +36,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  redis:
+    image: redis:alpine
+    restart: unless-stopped
