--- a/docker-compose.override.dist.yml
+++ b/docker-compose.override.dist.yml
@@ -14,3 +14,8 @@ services:
       - "27365:5432"
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
+  redis:
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./data/redis:/data
