--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,3 +39,10 @@ services:
   redis:
     image: redis:alpine
     restart: unless-stopped
+  mongo:
+    image: mongo
+    restart: unless-stopped
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_INITDB_DATABASE: minecraft
