--- a/docker-compose.override.dist.yml
+++ b/docker-compose.override.dist.yml
@@ -16,6 +16,11 @@ services:
       - ./data/postgres:/var/lib/postgresql/data
   redis:
     ports:
-      - "6379:6379"
+      - "27379:6379"
     volumes:
       - ./data/redis:/data
+  mongo:
+    ports:
+      - "27380:27017"
+    volumes:
+      - ./data/mongo:/data/db
